Docker based ROS environment added.
* Host network sharing added to docker-compose.yml
* RViz supported topic generation established with catkin pkg's

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,36 +1,38 @@
 version: '3'
 
 services:
-  ros-master:
-    container_name: ros-master
-    build: 
-      context: ./ros_indigo
-    volumes:
-      - ./catkin_ws:/catkin_ws
-    networks:
-      - ros_network
-    stdin_open: true
-    tty: true
-    command: /bin/bash
-
-  ros-node:
-    container_name: ros-node
-    build: 
-      context: ./ros_indigo
-    depends_on:
-      - ros-master
+  sfitc_ros-node:
+    image: ros_indigo
+    container_name: sfitc_ros-node
+    network_mode: host
     environment:
-      - "ROS_MASTER_URI=http://ros-master:11311"
-      - "DISPLAY=${DISPLAY}"
-      - "QT_X11_NO_MITSHM=1"
+      - ROS_MASTER_URI=http://0.0.0.0:11311
+      - ROS_IP=0.0.0.0
+      - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-    networks:
-      - ros_network
+      - /tmp/.docker.xauth:/tmp/.docker.xauth
+      - /media/joseph/Development/DS:/lidar_data
+      - ./sfitc/catkin_ws:/root/catkin_ws
     stdin_open: true
     tty: true
     command: /bin/bash
 
-networks:
-  ros_network:
-    driver: bridge
+  sfitc_ros_cartographer:
+    image: ros:noetic
+    container_name: sfitc_ros_cartographer
+    network_mode: host
+    environment:
+      - ROS_MASTER_URI=http://0.0.0.0:11311
+      - ROS_IP=0.0.0.0
+      - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
+    volumes:
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      - /tmp/.docker.xauth:/tmp/.docker.xauth
+      - /media/joseph/Development/DS:/lidar_data
+      - ./sfitc/catkin_ws:/root/catkin_ws
+    stdin_open: true
+    tty: true
+    command: /bin/bash
