--- a/docker/rtk/Dockerfile
+++ b/docker/rtk/Dockerfile
@@ -3,3 +3,5 @@ FROM ros:noetic-ros-core
 RUN apt-get update -y
 RUN apt-get install -y python3-rosdep python3-rosinstall python3-rosinstall-generator python3-wstool build-essential
 RUN apt-get install -y python3 python3-dev python3-pip
+
+CMD ["/bin/bash"]
